--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <a title="My Linkedin" href="https://www.linkedin.com/in/dario-bizzo-marques-filho-442117287/">
-            <img class="linke" src="main/linkee.png" alt="Linkedin icon">
+            <img class="linke" src="linkee.png" alt="Linkedin icon">
         </a>
         <script>
             let selectElement = document.querySelector('#changepage');
