--- a/volleyball.html
+++ b/volleyball.html
@@ -15,17 +15,17 @@
     </head>
     <body>
 
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="false">
+              <div class="carousel-item active">
                 <img class="d-block w-100" src="CAM GCV JUV.gif" alt="Volleyball play">
               </div>
-              <div class="carousel-item" data-bs-interval="false">
+              <div class="carousel-item">
                 <img class="d-block w-100" src="jogada_bloqueio.gif" alt="Volleyball play">
               </div>
             </div>
