--- a/volleyball.html
+++ b/volleyball.html
@@ -22,7 +22,7 @@
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
+              <div class="carousel-item">
                 <img class="d-block w-100" src="CAM GCV JUV.gif" alt="Volleyball play">
               </div>
               <div class="carousel-item">
