--- a/volleyball.html
+++ b/volleyball.html
@@ -13,20 +13,21 @@
         <link href="styles.css" rel="stylesheet">
         <title>Dario.com</title>
     </head>
-    <body>
-
-                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner">
+    <body>      
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block w-100" src="CAM GCV JUV.gif" alt="Volleyball play">
+                   <img class="d-block w-100" src="CAM GCV JUV.gif" alt="Volleyball play">
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="jogada_bloqueio.gif" alt="Volleyball play">
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <img class="d-block w-100" src="jogada_bloqueio.gif" alt="Volleyball play">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
               </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </button>
