--- a/volleyball.html
+++ b/volleyball.html
@@ -34,23 +34,21 @@
             <img class="linke_about" src="linkee.png" alt="Linkedin icon">
         </a>
         
-            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                       <img class="d-block w-100" src="CAM GCV JUV.gif" alt="Volleyball play">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="jogada_bloqueio.gif" alt="Volleyball play">
-                    </div>
-                  </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                  </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                  </button>
+           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="CAM GCV JUV.gif" alt="Volleyball play">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="jogada_bloqueio.gif" alt="Volleyball play">
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
         <script>
             let selectElement = document.querySelector('#changepage');
