--- a/volleyball.html
+++ b/volleyball.html
@@ -19,13 +19,12 @@
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="false">
+              <div class="carousel-item active" data-bs-interval="10000">
                 <img class="d-block w-100" src="CAM GCV JUV.gif" alt="Volleyball play">
               </div>
-              <div class="carousel-item" data-bs-interval="false">
+              <div class="carousel-item" data-bs-interval="10000">
                 <img class="d-block w-100" src="jogada_bloqueio.gif" alt="Volleyball play">
               </div>
             </div>
