--- a/volleyball.html
+++ b/volleyball.html
@@ -13,7 +13,7 @@
         <link href="styles.css" rel="stylesheet">
         <title>Dario.com</title>
     </head>
-    <body>
+    <body style="background-color: lightorange">
 
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
