--- a/index.html
+++ b/index.html
@@ -1,67 +1,68 @@
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/cascadia-code" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
-    <title>Dario.com</title>
-</head>
-<body>
-    <div class="container">
-        <div class="row justify-content-center mt-5">
-            <div class="col text-center">
-                <h1 class="h1_title">Dario Filho</h1>
+    <head>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <link href="https://fonts.cdnfonts.com/css/cascadia-code" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+        <link href="styles.css" rel="stylesheet">
+        <title>Dario.com</title>
+    </head>
+    <body>
+        <div class="div_title">
+            <div>
+                <h1 class="h1_title">
+                    Dario Filho
+                </h1>
                 <p class="small_text">Asking: "Daddy how do they make Mario" brought me here.</p>
             </div>
         </div>
 
-        <div class="row justify-content-center mt-5">
-            <div class="col-12 col-md-8">
-                <div class="sec_style_index">
-                    <div>
-                        <h3 class="terminal_text_up">PROBLEMS&nbsp;&nbsp;OUTPUT&nbsp;&nbsp;DEBUG CONSOLE&nbsp;&nbsp;<span style="border-bottom: 2px solid lightblue;">TERMINAL</span>&nbsp;&nbsp;PORTS&nbsp;&nbsp;COMMENTS</h3>
-                    </div>
-                    <h3 class="terminal_text">$ cd homepage</h3>
-                    <h3 class="terminal_text">homepage/ $ ls</h3>
-                    <h3 class="terminal_text">homepage_dariofilho.html about_me.html volleyball.html certificates.html</h3>
-                    <h3 class="terminal_text">homepage/ $ code homepage_dariofilho.html</h3>
-                    <h3 class="terminal_text">homepage/ $ code
-                        <select id="changepage" autofocus>
-                            <option value=""></option>
-                            <option value="option1">about_me.html</option>
-                            <option value="option2">volleyball.html</option>
-                            <option value="option3">certificates.html</option>
-                        </select>
-                    </h3>
+        <div class="sec_index">
+            <div class="sec_style_index">
+                <div>
+                    <h3 class="terminal_text_up">PROBLEMS&nbsp;&nbsp;OUTPUT&nbsp;&nbsp;DEBUG CONSOLE&nbsp;&nbsp;<span style="border-bottom: 2px solid lightblue;">TERMINAL</span>&nbsp;&nbsp;PORTS&nbsp;&nbsp;COMMENTS</h3>
                 </div>
+                <h3 class="terminal_text">$ cd homepage</h3>
+                <h3 class="terminal_text">homepage/ $ ls</h3>
+                <h3 class="terminal_text">homepage_dariofilho.html about_me.html volleyball.html certificates.html</h3>
+                <h3 class="terminal_text">homepage/ $ code homepage_dariofilho.html</h3>
+                <h3 class="terminal_text">homepage/ $ code
+                    <select id="changepage" autofocus>
+                        <option value=""></option>
+                        <option value="option1">about_me.html</option>
+                        <option value="option2">volleyball.html</option>
+                        <option value="option3">certificates.html</option>
+                      </select>
+                </h3>
             </div>
         </div>
-    </div>
+        <a title="My Linkedin" href="https://www.linkedin.com/in/dario-bizzo-marques-filho-442117287/">
+            <img class="linke" src="linkee.png" alt="Linkedin icon">
+        </a>
+        <script>
+            let selectElement = document.querySelector('#changepage');
 
-    <a title="My Linkedin" href="https://www.linkedin.com/in/dario-bizzo-marques-filho-442117287/">
-        <img class="linke" src="linkee.png" alt="Linkedin icon">
-    </a>
+            // Add event listener
+            selectElement.addEventListener('change', function() {
+                // Check selected option
+                if (this.value == 'option1') {
+                    // Navigate to page1
+                    window.location.href = 'about_me.html';
+                } else if (this.value == 'option2') {
+                    // Navigate to page2
+                    window.location.href = 'volleyball.html';
+                }else if (this.value == 'option3') {
+                    // Navigate to page2
+                    window.location.href = 'certificates.html';
+                }
+            });
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        let selectElement = document.querySelector('#changepage');
-
-        // Add event listener
-        selectElement.addEventListener('change', function() {
-            // Check selected option
-            if (this.value == 'option1') {
-                // Navigate to page1
-                window.location.href = 'about_me.html';
-            } else if (this.value == 'option2') {
-                // Navigate to page2
-                window.location.href = 'volleyball.html';
-            } else if (this.value == 'option3') {
-                // Navigate to page3
-                window.location.href = 'certificates.html';
-            }
-        });
-    </script>
-</body>
+        </script>
+    </body>
 </html>
