--- a/about_me.html
+++ b/about_me.html
@@ -28,7 +28,7 @@
                 can I get it and where from who? Brings fire to my eyes<br>
                 and the technical analysis sorcery don't even bring me <br>
                 into this that stuff is out of this world math that predicts<br>
-                if random will buy or sell. Graphpical analysis that just<br>
+                if random people will buy or sell. Graphpical analysis that just<br>
                 works and the holy grail fundamental analysis it is, I can't<br>
                 express, baffaling looking into the bussiness of Google or<br>
                 Pfizer and saying: "Hmm this looks cheap", the thrill of<br>
