--- a/volleyball.html
+++ b/volleyball.html
@@ -14,7 +14,7 @@
         <title>Dario.com</title>
     </head>
     <body style="background-color: lightorange">
-
+        <div style="height: 80vh">
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -37,6 +37,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+        </div>
 
         <div class="sec_about">
             <div class="sec_style_about">
