--- a/volleyball.html
+++ b/volleyball.html
@@ -13,8 +13,8 @@
         <link href="styles.css" rel="stylesheet">
         <title>Dario.com</title>
     </head>
-    <body style="background-color: lightorange">
-        <div style="height: 80vh">
+    <body>
+        <div style="height: 300px">
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
