--- a/volleyball.html
+++ b/volleyball.html
@@ -21,10 +21,10 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="10000">
-                    <img class="d-block w-100" src="CAM GCV JUV.gif" alt="Volleyball play">
+                    <img class="caroimg" src="CAM GCV JUV.gif" alt="Volleyball play">
                   </div>
                   <div class="carousel-item" data-bs-interval="10000">
-                    <img class="d-block w-100" src="jogada_bloqueio.gif" alt="Volleyball play">
+                    <img class="caroimg" src="jogada_bloqueio.gif" alt="Volleyball play">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
